<resources>
    <string name="app_name">Travel_App</string>
    <string name="first">first</string>
    <string name="second">Lets Enjoy A</string>
    <string name="third">New World</string>
    <string name="fourth">Search The Safest Destinations</string>
    <string name="get">Get Started</string>
    <string name="hi">Hii</string>
    <string name="where">Where You Want To</string>
    <string name="to"> Go ?</string>
    <string name="search">Search Here....</string>
    <string name="upcoming">Upcoming Trips</string>
    <string name="time">20 March 12:00 PM</string>
    <string name="date">20 March 3:30 PM</string>
    <string name="mumbai">Mumbai</string>
    <string name="t">TO</string>
    <string name="dubai">Dubai</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="popular">Popular Destinations</string>
    <string name="paris">Paris</string>
    <string name="france">France</string>
    <string name="book">Book Your Ticket Now</string>
    <string name="from">From</string>
    <string name="too">To</string>
    <string name="de">Date</string>
    <string name="view"> View Flight</string>
    <string name="b">Next</string>
    <string name="india">Famous Hill Station in India</string>
    <string name="ladakh">Leh Ladakh</string>
    <string name="full"> Enter Your Full Name</string>
    <string name="birth"> Enter Your Date Of Birth </string>
    <string name="email">Enter Your Email Id</string>
    <string name="contact">Enter Your Contact Number</string>
    <string name="passport">Enter Your Passport Number</string>
    <string name="ticket">Ticket</string>
    <string name="booking">Book</string>
    <string name="trip">Make Your Trip Now</string>
    <string name="wish">Wishing You a safe and Enjoyable Journey </string>
    <string name="s">View Buses</string>
    <string name="ti">ticket</string>
    <string name="today"> Available Flights </string>
    <string name="fly"> Emirates</string>
    <string name="style">.............................</string>
    <string name="tym">8:00 AM</string>
    <string name="ty">11:00 AM</string>
    <string name="payment">Payment</string>
    <string name="debit">Debit Card</string>
    <string name="upi">UPI</string>
    <string name="number"> Card Number</string>
    <string name="star">**** **** ***4507</string>
    <string name="m">MM/YY</string>
    <string name="c">CVC</string>
    <string name="dash">**** ****</string>
    <string name="d">****</string>
    <string name="pay">Pay</string>
    <string name="check">Accept Our Term and Conditions</string>
    <string name="i">I Accept The Privacy Policy</string>
    <string name="success">Success</string>
    <string name="su">Payment Send Successfully !</string>
    <string name="more">For More Information see The Notification</string>
    <string name="ok">OK</string>
    <string name="price">RS 10.000</string>
    <string name="amount">Enter The Amount</string>
    <string name="thank">Thank You For Using Our App For</string>
    <string name="app"> Travel And Ticket Booking</string>
    <string name="you">Thank You !</string>
    <string name="welcome">Welcome To Our App</string>
</resources>