<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/n"
    tools:context=".MainActivity5">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/a"
            android:scaleType="fitXY"
            android:contentDescription="@string/b"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:padding="10dp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/hi"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/travelling"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:paddingStart="20dp"
        android:id="@+id/full"
        android:ems="30"
        android:hint="@string/full"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:id="@+id/from"
        android:hint="@string/email"
        android:ems="20"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:paddingStart="20dp"
        android:hint="@string/contact"
        android:ems="10"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="date"
        android:paddingStart="20dp"
        android:hint="@string/birth"
        android:ems="10"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:paddingStart="20dp"
        android:hint="@string/passport"
        android:ems="8"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:paddingStart="20dp"
        android:hint="@string/from"
        android:ems="10"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:paddingStart="20dp"
        android:hint="@string/too"
        android:ems="10"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="date"
        android:paddingStart="20dp"
        android:hint="@string/de"
        android:ems="10"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:paddingStart="20dp"
        android:hint="@string/ticket"
        android:ems="10"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/book"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/leh"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:text="@string/booking"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</LinearLayout>