<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/n"
    tools:context=".MainActivity9">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/buss"
        android:scaleType="centerCrop"
        android:contentDescription="@string/b"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/jeep"
            android:contentDescription="@string/ticket"
            android:layout_marginStart="50dp"/>
        <EditText
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="65dp"
            android:inputType="text"
            android:hint="@string/from"
            android:background="@drawable/edittext"
            android:paddingStart="30dp"
            tools:ignore="Autofill,RtlSymmetry" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="140dp"
            android:inputType="text"
            android:hint="@string/too"
            android:background="@drawable/edittext"
            android:paddingStart="30dp"
            tools:ignore="Autofill,RtlSymmetry" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="215dp"
            android:inputType="text"
            android:hint="@string/de"
            android:background="@drawable/edittext"
            android:paddingStart="30dp"
            tools:ignore="Autofill,RtlSymmetry" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="290dp"
            android:inputType="text"
            android:hint="@string/ti"
            android:background="@drawable/edittext"
            android:paddingStart="30dp"
            tools:ignore="Autofill,RtlSymmetry" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="360dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/suitcase"
            android:contentDescription="@string/s"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/wish"
            android:layout_marginStart="30dp"
            android:padding="10dp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/leh"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:text="@string/booking"
        android:textStyle="bold"
        android:id="@+id/book"
        android:textColor="@color/white"/>
</LinearLayout>