<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/c"
                android:src="@drawable/blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su"
                android:textAlignment="center"
                android:textStyle="bold"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/more"
                android:textStyle="bold"
                android:textAlignment="center"/>
              <androidx.appcompat.widget.AppCompatButton
                  android:layout_width="250dp"
                  android:layout_height="60dp"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/ok"
                  android:background="@drawable/leh"
                  android:textStyle="bold"
                  android:textColor="@color/white"
                  android:id="@+id/ok"/>


</LinearLayout>