<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/n"
    tools:context=".MainActivity6">

    <androidx.cardview.widget.CardView
       android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
           android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">
            <TextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit"
                android:textStyle="bold"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:background="@drawable/button"
                android:padding="20dp"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/debit"
                tools:ignore="UseCompatTextViewDrawableXml" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upi"
                android:textStyle="bold"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:background="@drawable/button"
                android:padding="20dp"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/apple"
                tools:ignore="UseCompatTextViewDrawableXml" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/baseline_credit_card_24"
                android:padding="20dp"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                />

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/baseline_credit_card_24"
                android:hint="@string/star"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="25dp"
                android:textStyle="bold"
                android:ems="15"
                android:padding="10dp"
                tools:ignore="Autofill" />
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m"
                    android:textStyle="bold"
                    android:id="@+id/month"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textStyle="bold"
                    android:id="@+id/cvc"
                    android:layout_marginEnd="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    tools:ignore="RelativeOverlap" />
                <EditText
                    android:layout_marginTop="8dp"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/month"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button"
                    android:inputType="date"
                    android:hint="@string/dash"
                    android:paddingStart="30dp"
                    tools:ignore="Autofill,RtlSymmetry" />
                <EditText
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/cvc"
                    android:background="@drawable/button"
                    android:inputType="number"
                    android:hint="@string/d"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    tools:ignore="Autofill,RtlSymmetry" />

            </RelativeLayout>
           <EditText
              android:drawablePadding="20dp"
               android:layout_marginTop="15dp"
               android:layout_width="350dp"
               android:layout_height="50dp"
             android:paddingStart="20dp"
               android:background="@drawable/edittext"
               android:inputType="number"
               android:drawableStart="@drawable/baseline_currency_rupee_24"

               android:hint="@string/amount"
              android:layout_gravity="center_horizontal"
               tools:ignore="Autofill,RtlSymmetry" />
            <CheckBox
               android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:textStyle="bold"/>
               <CheckBox
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/i"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="5dp"
                   android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/pay"
                android:background="@drawable/button"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"
                android:text="@string/pay"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>