<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/front"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="250dp"
       android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="90dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/airplane"
          android:layout_margin="20dp"
          android:contentDescription="@string/first"/>
    </androidx.cardview.widget.CardView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
           android:text="@string/second"
          android:textColor="@color/white"
          android:textSize="25sp"
          android:textStyle="italic"
          android:layout_marginTop="15dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/third"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:layout_marginTop="5dp"
          android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fourth"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="230dp"
       />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
       android:background="@drawable/button"
       android:backgroundTint="@color/black"
      android:text="@string/get"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:id="@+id/next"/>
</LinearLayout>